--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,23 +8,23 @@ body {
     background-color: #d9dcd6;
 }
 
-header {
+.header {
     padding: 20px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     background-color: #2a607c;
     color: #ffffff;
 }
 
-header h1 {
+.header h1 {
     display: inline-block;
     font-size: 48px;
 }
 
-header h1 .seo {
+.header h1 .seo {
     color: #d9dcd6;
 }
 
-header nav {
+.header nav {
     padding-top: 15px;
     margin-right: 20px;
     float: right;
@@ -32,11 +32,11 @@ header nav {
     font-size: 20px;
 }
 
-header nav ul {
+.header nav ul {
     list-style-type: none;
 }
 
-header nav ul li {
+.header nav ul li {
     display: inline-block;
     margin-left: 25px;
 }
@@ -69,7 +69,7 @@ p {
     margin-left: 25px;
 }
 
-content {
+.content {
     width: 75%;
     display: inline-block;
     margin-left: 20px;
@@ -126,13 +126,13 @@ let's pic one since all their dimensions, font-family and color are the same*/
 }
 
 
-footer {
+.footer {
     padding: 30px;
     clear: both;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     text-align: center;
 }
 
-footer h2 {
+.footer h2 {
     font-size: 20px;
 }
