--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,5 @@
+/* GENERAL STYLES */
+
 * {
     box-sizing: border-box;
     padding: 0;
@@ -8,23 +10,25 @@ body {
     background-color: #d9dcd6;
 }
 
-.header {
+/* HEADER */
+
+header {
     padding: 20px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     background-color: #2a607c;
     color: #ffffff;
 }
 
-.header h1 {
+header h1 {
     display: inline-block;
     font-size: 48px;
 }
 
-.header h1 .seo {
+header h1 .seo {
     color: #d9dcd6;
 }
 
-.header nav {
+header nav {
     padding-top: 15px;
     margin-right: 20px;
     float: right;
@@ -32,14 +36,16 @@ body {
     font-size: 20px;
 }
 
-.header nav ul {
+header nav ul {
     list-style-type: none;
 }
 
-.header nav ul li {
+header nav ul li {
     display: inline-block;
     margin-left: 25px;
 }
+
+/* TEXT STYLES */
 
 a {
     color: #ffffff;
@@ -50,6 +56,8 @@ p {
     font-size: 16px;
 }
 
+/* HERO DIV WITH BACKGROUND IMAGE */
+
 .hero {
     height: 800px;
     width: 100%;
@@ -58,6 +66,8 @@ p {
     background-size: cover;
     background-position: center;
 }
+
+/* FLOATS */
 
 .float-left {
     float: left;
@@ -69,11 +79,15 @@ p {
     margin-left: 25px;
 }
 
-.content {
+/* MAIN */
+
+main {
     width: 75%;
     display: inline-block;
     margin-left: 20px;
 }
+
+/* BENEFITS ASIDE */
 
 .benefits {
     margin-right: 20px;
@@ -85,28 +99,26 @@ p {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     background-color: #2589bd;
 }
-/* replace benefit-lead, brand, and cost with benefit class, 
-since they all have the margin-bottom and color*/
 
 .benefit {
     margin-bottom: 32px;
     color: #ffffff;
 }
-/* remove lead, brand, and cost from the h3
-let's just leave h3 since  everything is the same*/
+
 .benefit h3 {
     margin-bottom: 10px;
     text-align: center;
 }
-/* let's just call it  img since the display, margin, and max-width are the same*/
+
 .benefit img {
     display: block;
     margin: 10px auto;
     max-width: 150px;
 }
-/* let's call the sections about online activities online
-let's pic one since all their dimensions, font-family and color are the same*/
-.online {
+
+/* SERVICES SECTIONS */
+
+.service {
     margin-bottom: 20px;
     padding: 50px;
     height: 300px;
@@ -115,24 +127,24 @@ let's pic one since all their dimensions, font-family and color are the same*/
     color: #ffffff;
 }
 
-.online img {
+.service img {
     max-height: 200px;
 }
 
-
-.online h2 {
+.service h2 {
     margin-bottom: 20px;
     font-size: 36px;
 }
 
+/* FOOTER */
 
-.footer {
+footer {
     padding: 30px;
     clear: both;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     text-align: center;
 }
 
-.footer h2 {
+footer h2 {
     font-size: 20px;
 }
