--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -148,3 +148,7 @@ footer {
 footer h2 {
     font-size: 20px;
 }
+@media screen and (min-width: 480px) {
+    #leftsidebar {width: 200px; float: left;}
+    #main {margin-left: 216px;}
+  }
